crates/rs-macro/tests/abigen/duplicate_alias_name.stderr
error: MyStruct duplicate alias name
  --> tests/abigen/duplicate_alias_name.rs:34:9
   |
34 |         core::starknet::eth_address::EthAddress as MyStruct;
   |         ^^^^
